--- a/History.txt
+++ b/History.txt
@@ -1,3 +1,8 @@
+=== 0.1.4 / 2009-01-17
+
+* All specs now pass with RSpec 1.1.12.
+* All specs pass on Ruby 1.9.1-rc1.
+
 === 0.1.3 / 2009-01-14
 
 * Allow the use of lambdas to generate the default values of parameters.
