--- a/History.txt
+++ b/History.txt
@@ -5,6 +5,7 @@
 * Use 'hoe/signing' for signed RubyGems.
 * Moved to YARD based documentation.
 * Added YARD handlers for documenting parameter method calls.
+* All specs pass on JRuby 1.3.1.
 
 === 0.1.7 / 2009-07-19
 
