--- a/History.rdoc
+++ b/History.rdoc
@@ -1,3 +1,9 @@
+=== 0.1.9 / 2009-01-30
+
+* Require RSpec >= 1.3.0.
+* Require YARD >= 0.5.3.
+* Added {Parameters::ClassMethods}.
+
 === 0.1.8 / 2009-09-21
 
 * Require Hoe >= 2.3.3.
